Bug 313034 - Don't show unsupported Sleep states
Summary: Don't show unsupported Sleep states
Status: RESOLVED FIXED
Alias: None
Product: homerun
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.1.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Homerun bugs.
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-10 19:07 UTC by Philip Muškovac
Modified: 2013-01-24 15:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philip Muškovac 2013-01-10 19:07:17 UTC
Opening the power tab in homerun shows "Hibernate" in the list of Power states on my system even though hibernate is not supported on my system. Please check if the sleep state is supported before adding the button for it in the UI.

See kde-workspace/plasma/desktop/applets/kickoff/simpleapplet/simpleapplet.cpp line 750ff for kickoffs implementation.

Reproducible: Always
Comment 1 Aurelien Gateau 2013-01-24 15:52:08 UTC
Git commit 44fd6776691df2fe744ec988326aad9d251cc93b by Aurélien Gâteau.
Committed on 24/01/2013 at 16:50.
Pushed by gateau into branch 'homerun/0.1'.

power: hide unavailable sleep modes

Many thanks to Philip for pointing me to the code to copy from!
FIXED-IN: 0.1.2

M  +1    -0    components/CMakeLists.txt
M  +18   -11   components/powermodel.cpp

http://commits.kde.org/homerun/44fd6776691df2fe744ec988326aad9d251cc93b