power: hide unavailable sleep modes

Many thanks to Philip for pointing me to the code to copy from!

BUG: 313034
FIXED-IN: 0.1.2